allow optional configuration of RDECK_JVM